[gd_scene load_steps=5 format=3 uid="uid://b81wxo2et2dpp"]

[ext_resource type="Script" path="res://ui/navigation_layer.gd" id="1_3ub1j"]
[ext_resource type="Texture2D" uid="uid://bdn3oicjeje2r" path="res://assets/triangle_back.png" id="1_na7tb"]
[ext_resource type="Texture2D" uid="uid://5pt8k0h2hkxg" path="res://assets/menu_icon.png" id="2_ld3px"]
[ext_resource type="StyleBox" uid="uid://dp1e8271w3445" path="res://styles/style_box_flat_only_borders_style.tres" id="2_oo555"]

[node name="NavigationLayer" type="CanvasLayer"]
script = ExtResource("1_3ub1j")

[node name="BackButton" type="Button" parent="."]
custom_minimum_size = Vector2(60, 60)
offset_right = 60.0
offset_bottom = 68.0
theme_override_styles/focus = ExtResource("2_oo555")
icon = ExtResource("1_na7tb")
flat = true
expand_icon = true

[node name="ErrorLabel" type="Label" parent="."]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -24.5
offset_right = 24.5
offset_bottom = 17.0
grow_horizontal = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.878431, 0, 0, 1)
theme_override_font_sizes/font_size = 11
text = "No error"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MenuButton" type="Button" parent="."]
custom_minimum_size = Vector2(60, 60)
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -60.0
offset_bottom = 68.0
grow_horizontal = 0
theme_override_styles/focus = ExtResource("2_oo555")
icon = ExtResource("2_ld3px")
flat = true
icon_alignment = 2
expand_icon = true

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="MenuButton" to="." method="_on_menu_button_pressed"]
